--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     {% include 'parciais/_nav.html' %}
 
     <!-- Page Content -->
-    <div class="container pt-5 mb-4">
+    <div class="container pt-5 mb-4" style="min-height: 100vh">
         <div class="row">
             <div class="col-lg-12">
                 {% block conteudo %}{% endblock %}
