--- a/templates/parciais/_footer.html
+++ b/templates/parciais/_footer.html
@@ -8,7 +8,14 @@
                 <a href="https://www.djangoproject.com/" class="text-white">Powered by Django</a>
             </div>
             <div class="col text-right">
-                <p class="text-white">By Herbety Paulo</p> 
+                <p class="text-white">By Herbety Paulo</p>
+            </div>
+            <div>
+                <a href="https://github.com/Pbezerra-dev" class="text-white"><i class="fab fa-github"></i></a>
+            </div>
+            <div>
+                <a href="https://www.linkedin.com/in/herbety-paulo/" class="ml-3 text-white">
+                <i class="fab fa-linkedin"></i></a>
             </div>
         </div>
     </div>
