upgrade in layout

--- a/posts/templates/posts/post_detalhes.html
+++ b/posts/templates/posts/post_detalhes.html
@@ -57,8 +57,7 @@
 
                 <div class="g-recaptcha" data-sitekey="{{ token_recaptcha }}"></div>
                 <br> {% include 'parciais/_messages.html' %} 
-                <!-- <a href="" class="btn btn-primary float-right"><i class="fas fa-angle-double-up"></i></a> -->
-                <input id="envia_comentario" type="submit" class="btn btn-primary" value="Enviar">
+                <input id="envia_comentario" type="submit" class="btn btn-primary mb-5" value="Enviar">
             </form>
         </div>
     <div class="col-xl"></div>
