--- a/templates/parciais/_footer.html
+++ b/templates/parciais/_footer.html
@@ -4,16 +4,9 @@
 <footer class="page-footer font-small bg-primary">
     <div class="container pt-3">
         <div class="row">
-            <div class="col text-left">
-                <a href="https://www.djangoproject.com/" class="text-white">Powered by Django</a>
-            </div>
-            <div class="col text-right">
-                <p class="text-white">By Herbety Paulo</p>
-            </div>
-            <div>
-                <a href="https://github.com/Pbezerra-dev" class="text-white"><i class="fab fa-github"></i></a>
-            </div>
-            <div>
+            <div class="col text-center mb-3">
+                <a class="text-white">Herbety Paulo</a>
+                <a href="https://github.com/Pbezerra-dev" class="ml-3 text-white"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/herbety-paulo/" class="ml-3 text-white">
                 <i class="fab fa-linkedin"></i></a>
             </div>
